--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -947,7 +947,7 @@ textarea::placeholder {
   overflow: hidden;
 }
 
-.form-group .form-help:focus-within {
+.form-group:focus-within .form-help {
   max-height: 20rem;
   margin: .4rem 0 0;
 }
