--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,9 +1,10 @@
+/* Nested Declarations */
+
 body {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
 
   p {
     margin: 10px;
   }
 }
-
