--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -761,6 +761,10 @@ ul.row {
   padding-top: 5rem;
 }
 
+.article-page .header {
+  background-color: transparent;
+}
+
 @media only screen and (max-width: 767px) {
   .section-hero {
     margin: -0.1rem 0;
@@ -842,7 +846,6 @@ ul.row {
   transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
-
 .card-work .card-title {
   text-align: center;
   margin: 0;
@@ -854,6 +857,7 @@ ul.row {
   display: block;
   text-decoration: none;
   padding-top: 45%;
+  opacity: 0;
 }
 
 .card-work .card-title a::after {
@@ -865,12 +869,8 @@ ul.row {
   content: '';
 }
 
-.card-work .card-title a {
-  opacity: 0;
-}
-
 .card-work .card-title a:focus,
-.card-work:hover .card-inner a {
+.card-work:hover .card-title a {
   opacity: 1;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
@@ -890,10 +890,6 @@ ul.row {
   .card-work .card-title a {
     display: block;
     padding: 2rem 1rem 0 1rem;
-  }
-
-  .card-work:hover .card-inner {
-    background-color: transparent;
   }
 
   .card-work:hover .card-image {
